# NeuROM_optim

./: .gitignore  CITATION.cff  README.md  pyproject.toml
NeuROM_optim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/src/: conf.py  index.md
neurom_optim/: _version.py
neurom_optim/Baselines/Magnetostatic_2D/NL/: inductance_ngsolve.py
neurom_optim/Baselines/Poisson_2D/Auxiliary/: gmsh_to_NGSolve.py  (+2 more)
neurom_optim/FENN/ConstantNN/: constantNN.py
neurom_optim/FENN/L2NN/: field_L2NN.py  regions_L2NN.py
neurom_optim/MaterialNN/: BinarySelection.py  NL_nu copy.py  NL_nu_altair.py
neurom_optim/PDE/: Magnetostatic_Optim_2D_loss.py  Magnetostatic_Optim_2D_loss_NL.py  magnetostatic_2D.py  magnetostatic_2D_NL.py  operators.py  optim_2D.py  poisson.py
neurom_optim/Post_processing/Debug_plots/: Plots.py
neurom_optim/Post_processing/VTKExport/: Poisson_2D_scalar.py  export_vtk.py  optim_2D_to_vtk.py  scalar_2D_to_vtk.py
neurom_optim/Pre_processing/: build_FEENN.py  build_MaterialNN.py  build_optimizer.py  build_solver.py  process_gmsh.py  process_hardware.py  setBCs.py
neurom_optim/PropertiesNN/: PropertiesNN.py
neurom_optim/Solver/: optimizer.py  solver.py  stop_criterion.py
neurom_optim/yourpkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/1d_notebook/: main.py
scripts/design_poc/: main.py
src/hidenn_playground/: __init__.py  elements.py  evaluator.py  fem_model.py  field.py  geometry.py  integrator.py  mesh.py  quadratures.py  shape_functions.py
tests/integration/: test_1d_beam_deflection.py
tests/unit/: test_iso_parametric_1d.py
(+6 files in other folders)
