[project]
name = "hidenn_playground"
version = "0.1.0"
description = "Various POC for HideNN framework using pytorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
