[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "NeuROM_optim"
dynamic = ["version"]
authors = [
    {name = "Octave Jeanne, Théodore Cherrière, Alexandre Daby-Seesaram", email = "octave.jeane@ens-paris-saclay.fr"}
]
description = "NeuROM_optim, a topology optimisation library based on the HiDeNN Framework (Finite Element Neural Network Interpolation)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "matplotlib",
    "meshio",
    "numpy",
    "ipython",
    "tqdm",
    "vtk",
]

[project.urls]
Homepage = "https://github.com/Octave-Jeanne/NeuROM_optim"

[project.scripts]
neurom_optim = "neurom_optim:main"

# [tool.setuptools]
# packages = ["neurom_optim" ]

# ==== automates the discovery of the package architecture ====
[tool.setuptools.packages.find]
where = ["."]
include = ["neurom_optim*"]  

[tool.setuptools_scm]
version_file = "neurom_optim/_version.py"